src/objects/API_Connection_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Provides connection data for external API callouts</description>
    <fields>
        <fullName>Google_Analytics_Property_Id__c</fullName>
        <inlineHelpText>The ID of the GA property to which the MP hit will be registered. In
production, use UA-10308612-26, in development use UA-55705032-15.
Used only when creating a Google Analytics connection</inlineHelpText>
        <label>Google Analytics Property Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>The password for connecting to the API</inlineHelpText>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>The target URL of the API</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <inlineHelpText>User name used for connecting to the API</inlineHelpText>
        <label>UserName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>API Connection Setting</label>
</CustomObject>